Fix issue where contents of page were not centered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,8 @@ body {
     font-family: 'Karla', sans-serif;
     background-color: var(--off-white);
     max-width: var(--max-width);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .content-wrapper {
@@ -34,6 +36,9 @@ header {
     top: 0;
     width: 100%;
     height: 6%;
+    max-width: var(--max-width);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media only screen and (max-height: 600px) {
@@ -139,6 +144,7 @@ footer {
     height: 7%;
     background-color: var(--off-white);
     padding-bottom: 3%;
+    max-width: var(--max-width);
 }
 
 .score {
